Fixed Sass warnings, wrapped nested declarations in `& {}`

--- a/MediaOverlay/MediaOverlay.module.scss
+++ b/MediaOverlay/MediaOverlay.module.scss
@@ -92,8 +92,10 @@
 			font-size: variables.$sand-mediaoverlay-title-font-size;
 			line-height: variables.$sand-mediaoverlay-line-height;
 		}
-		font-size: variables.$sand-mediaoverlay-title-font-size;
-		line-height: variables.$sand-mediaoverlay-line-height;
+		& {
+			font-size: variables.$sand-mediaoverlay-title-font-size;
+			line-height: variables.$sand-mediaoverlay-line-height;
+		}
 	}
 
 	@include skin.applySkins {
