--- a/TooltipDecorator/Tooltip.module.scss
+++ b/TooltipDecorator/Tooltip.module.scss
@@ -60,13 +60,15 @@
 		--sand-tooltip-label-width: auto;
 
 		@include mixins.sand-small-button-text;
-		font-size: variables.$sand-tooltip-label-font-size;
-		font-weight: variables.$sand-tooltip-font-weight;
-		line-height: variables.$sand-tooltip-label-height;
-		white-space: nowrap;
-		width: var(--sand-tooltip-label-width); // assign a width if necessary, but without a width, "auto" is just fine.
-		padding: variables.$sand-tooltip-padding;
-		border-radius: variables.$sand-tooltip-border-radius;
+		& {
+			font-size: variables.$sand-tooltip-label-font-size;
+			font-weight: variables.$sand-tooltip-font-weight;
+			line-height: variables.$sand-tooltip-label-height;
+			white-space: nowrap;
+			width: var(--sand-tooltip-label-width); // assign a width if necessary, but without a width, "auto" is just fine.
+			padding: variables.$sand-tooltip-padding;
+			border-radius: variables.$sand-tooltip-border-radius;
+		}
 
 		@include mixins.enact-locale-rtl("") {
 			text-align: right;
