--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -71,7 +71,9 @@
 		* Add a padding to your component which includes the standard sandstone spotlight padding on the
 		* sides and uses the argument for padding on the top and bottom.
 		*/
-		padding: nth($values, 1) variables.$sand-spotlight-outset;
+		& {
+			padding: nth($values, 1) variables.$sand-spotlight-outset;
+		}
 	} @else if (length($values) == 2) {
 		/*
 		* Add a padding to your component which includes the standard sandstone spotlight padding on the
